--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-    <script src="./test/Drag.ts" type="module"></script>
+    <script src="./test/Scroll.ts" type="module"></script>
+
+    <u-scrollbox style="block-size: 100px;">
+        <div style="block-size: 200px;"></div>
+    </u-scrollbox>
 
 </body>
 </html>
