use atan2 trick

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     <script src="./test/Scroll.ts" type="module"></script>
 
     <u-scrollbox style="block-size: 100px;">
-        <div style="block-size: 200px;"></div>
+        <div style="block-size: 200px;">
+            Deception...
+        </div>
     </u-scrollbox>
 
 </body>
