--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
     <script src="./test/Scroll.ts" type="module"></script>
 
-    <u-scrollbox style="block-size: 100px;">
+    <ui-scrollbox style="block-size: 100px;">
         <div style="block-size: 200px;">
             Deception...
         </div>
-    </u-scrollbox>
+    </ui-scrollbox>
 
 </body>
 </html>
