--- a/src/$core$/ScrollBox.html
+++ b/src/$core$/ScrollBox.html
@@ -5,5 +5,5 @@
     <div data-alpha="0" class="scrollbar-y" part="scrollbar-y" draggable="false">
         <div data-alpha="1" data-scheme="inverse" data-chroma="0.1" data-highlight="6" data-highlight-hover="10" class="thumb" part="thumb-y" draggable="false"></div>
     </div>
-    <div class="content-box" part="content-box"><slot></slot></div>
+    <div data-alpha="0" class="content-box" part="content-box"><slot></slot></div>
 </template>
