--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
 </head>
 <body>
 
+    <style>
+        body, html {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            padding: 0px;
+            margin: 0px;
+            inline-size: 100dvi;
+            block-size: 100dvb;
+            overflow: hidden;
+        }
+    </style>
+
     <script src="./test/Scroll.ts" type="module"></script>
 
     <ui-scrollbox style="block-size: 100px;">
